--- a/env.example
+++ b/env.example
@@ -6,4 +6,8 @@ DB_PASSWORD=password
 DB_NAME=pora_vstavat
 
 # Application Configuration
-PORT=3000 
+PORT=3000
+
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_EXPIRES_IN=7d 
