--- a/env.example
+++ b/env.example
@@ -1,9 +1,9 @@
 # Database Configuration
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=password
-DB_NAME=pora_vstavat
+DB_NAME=wakeup-project
 
 # Application Configuration
 PORT=3000
