--- a/package.json
+++ b/package.json
@@ -22,7 +22,14 @@
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
     "create-curator": "node scripts/create-curator.js",
-    "seed-families": "tsx drizzle/seed.ts"
+    "seed-families": "tsx drizzle/seed.ts",
+    "pm2:start": "pm2 start ecosystem.config.js",
+    "pm2:stop": "pm2 stop pora-vstavat",
+    "pm2:restart": "pm2 restart pora-vstavat",
+    "pm2:delete": "pm2 delete pora-vstavat",
+    "pm2:logs": "pm2 logs pora-vstavat",
+    "pm2:monit": "pm2 monit",
+    "pm2:status": "pm2 status"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
