--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
     "create-curator": "node scripts/create-curator.js",
-    "seed-families": "tsx drizzle/seed.ts",
+    "seed-families": "tsx scripts/seed-families.ts",
     "pm2:start": "pm2 start ecosystem.config.js",
     "pm2:stop": "pm2 stop pora-vstavat",
     "pm2:restart": "pm2 restart pora-vstavat",
